--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="container">
+        <div class="about">
+            <img src="./images/photo.png" alt="My photo" width="230" height="200">
+            <h1 id="name">Denis Yeremenok</h1>
+            <p>&#10148 Minsk, Belarus</p>
+            <p><img src="./images/cake.jpg" alt="My photo" width="15" height="15"> 24.08.1981</p>
+            <p><img src="./images/email.png" alt="Email" width="15" height="15">  denis-vd@tut.by</p>
+            <p>&#9990; +375447636997</p>
+            <p><img src="./images/linkedin.png" alt="Linkedin" width="15" height="15"><a href="https://www.linkedin.com/in/%D0%B4%D0%B5%D0%BD%D0%B8%D1%81-%D0%B5%D1%80%D0%B5%D0%BC%D0%B5%D0%BD%D0%BE%D0%BA-478651159/"> Linkedin</a></p>
+            <p><img src="./images/email.png" alt="Email" width="15" height="15"></p>
+            <p></p>
+            <p></p>
+        </div c>
+    </div>
+    
+</body>
+</html>
