--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             </div>
         </div>
         <div class="Biocontainer">
-            <article style="min-height: 215px;">I'm studying the profession of frontend developer. I have a basic
+            <div class="Articleitem">I'm studying the profession of frontend developer. I have a basic
                 knowledge of HTML/CSS and a basic knowledge of JavaScript/Typescrypt.
                 I'm also studying agile development methodologies as Scrum, Kanban.
                 My free time is devoted to further study of JavaScript programming,
@@ -125,7 +125,8 @@
                 I have a high level of motivation to learn and would
                 very much like to take frontend developer course.
                 I also have a long history of in-depth research into blockchain technology and smart
-                contracts.</article>
+                contracts.
+            </div>
             <div class="StudyItem">
                 <h3>Education</h3>
             </div>
@@ -156,13 +157,14 @@
 
             </div>
         </div>
-</div>
-<footer class="foot">
-    <span><button><a href="https://github.com/MXCretu">Github</a></button>  14.06.2022 </span>
-    <span><img src="./images/rs_school_js.svg" alt="" width="40px" min-height="30px"> <button><a href="https://rs.school/js/"> RSschool</a></button></span>
-    
+    </div>
+    <footer class="foot">
+        <span><a href="https://github.com/MXCretu">GITHUB</a> 14.06.2022 </span>
+        <span><img src="./images/rs_school_js.svg" alt="" width="40"> <a
+                    href="https://rs.school/js/"> RSschool</a></span>
 
-</footer>
+
+    </footer>
 </body>
 
 </html>
